<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Giris">

    <TextView
        android:id="@+id/textViewGirisEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewGirisEmail" />

    <EditText
        android:id="@+id/editTextGirisEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textViewGirisSifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewGirisSifre" />

    <EditText
        android:id="@+id/editTextGirisSifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonGiris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonGiris" />

    <TextView
        android:id="@+id/textViewGirisSifremiUnuttum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textViewGirisSifremiUnuttum" />

</LinearLayout>