<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".KayitOl">

    <TextView
        android:id="@+id/textViewKayitOlEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewKayitOlEmail" />

    <EditText
        android:id="@+id/editTextKayitOlEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textViewKayitOlSifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewKayitOlSifre" />

    <EditText
        android:id="@+id/editTextKayitOlSifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonKayitOl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonKayitOl" />
</LinearLayout>